--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 spring.datasource.driver-class-name=org.postgresql.Driver
